tests/seldon/seldon-core-operator/base/test_data/expected/rbac.authorization.k8s.io_v1_role_seldon-manager-cm-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  creationTimestamp: null
  labels:
    app: seldon
    app.kubernetes.io/instance: seldon-core
    app.kubernetes.io/name: seldon-core-operator
    app.kubernetes.io/version: 1.0.2
  name: seldon-manager-cm-role
  namespace: kubeflow
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - get
  - list
  - watch
