tests/seldon/seldon-core-operator/base/test_data/expected/rbac.authorization.k8s.io_v1_rolebinding_seldon-manager-cm-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app: seldon
    app.kubernetes.io/instance: seldon-core
    app.kubernetes.io/name: seldon-core-operator
    app.kubernetes.io/version: 1.0.2
  name: seldon-manager-cm-rolebinding
  namespace: kubeflow
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: seldon-manager-cm-role
subjects:
- kind: ServiceAccount
  name: seldon-manager
  namespace: kubeflow
